CHANGELOG
---------------
2020-12-12 12:56 PST
- Added a UIManager class to handle UI-specific tasks
- Added a SpriteManager class to handle sprite-finding tasks
- Modified GameManager to remove UI-related functionality
- Modified debug image for easier testing (ex. not a simple white square)
- Removed Character class (not needed) and related debugging materials
---------------
2020-12-12 12:03 PST
- Added placeholder image for testing purposes
- Modified Parser class to better suit the script format
---------------
2020-12-11 21:13 PST
- Added a GameManager so we can later trigger events
- Added a placeholder UI for testing purposes
- Added functionality for reading a single script
- Modified Parser class to remove old code
- Modified Parser class to use List instead of ArrayList (which is deprecated)
---------------
2020-12-11 17:10 PST
- Added TestScene with an empty game object for testing purposes
- Modified Parser class so we can now retrieve a list of commands rather than do everything within the Parser class
---------------
2020-12-11 16:33 PST
- Added Parser class with basic functionality for reading scripts
- Added a debug script for testing purposes 
---------------
2020-12-11 14:57 PST
- Added a Changelog to keep track of changes
- Added Resources folder
- Added Scripts folder
- Added Sprites folder
- Added Character class 
- Added debug characters & images for testing purposes