@@ -8,18 +8,29 @@ using TMPro;
 public class UIManager : MonoBehaviour
 {
     [SerializeField] private Image background = null; // The game's background
-    [SerializeField] private RectTransform background_transform = null; // The game's background
+    [SerializeField] private RectTransform background_transform = null; // The game's background's transform
+    [SerializeField] private Image character = null; // The character's image 
+    [SerializeField] private RectTransform character_transform = null; // The character's image's transform
     [SerializeField] private TextMeshProUGUI header_text = null; // Place where the character's name goes
     [SerializeField] private TextMeshProUGUI dialogue_text = null; // Place where the character's speech goes
     
     [SerializeField] private int reference_width = 1600; // How wide the image is for a base 16:9 resolution
+    [SerializeField] private int reference_height = 840; // How high the image can be for a base 16:9 resolution
     
     // Swap image for background
     public void ChangeBackgroundImage(string background_path)
     {
         Sprite temp = Resources.Load<Sprite>(background_path);
-        ResizeImage(temp);
+        AdjustImageHeight(temp, background_transform);
         background.sprite = temp;
+    }
+    
+    // Swap image for character
+    public void ChangeCharacterImage(string character_path)
+    {
+        Sprite temp = Resources.Load<Sprite>(character_path);
+        AdjustImageWidth(temp, character_transform);
+        character.sprite = temp;
     }
     
     // Change the text shown in the header box
@@ -29,11 +40,15 @@ public class UIManager : MonoBehaviour
     }
     
     // Change the text shown in the dialogue box
-    public IEnumerator ChangeDialogueText(string new_speech)
+    public IEnumerator ChangeDialogueText(string new_speech, bool is_thought=false)
     {
         do
         {
-            dialogue_text.text = new_speech;
+            if (!is_thought) dialogue_text.text = new_speech;
+            else 
+            {
+                dialogue_text.text = "<i>" + new_speech + "</i>";
+            }
             yield return null;
         } while (!Input.GetKeyDown(KeyCode.Mouse0));
     }
@@ -44,8 +59,16 @@ public class UIManager : MonoBehaviour
         dialogue_text.text = ""; // Directly set because otherwise it will be cleared after a mouse click
     }
     
-    private void ResizeImage(Sprite sprite)
+    // Adjust the image's height so the background looks proportionally correct
+    private void AdjustImageHeight(Sprite sprite, RectTransform transform)
     {
-        background_transform.sizeDelta = new Vector2(reference_width, (reference_width*sprite.rect.height) / sprite.rect.width);
+        transform.sizeDelta = new Vector2(reference_width, (reference_width*sprite.rect.height) / sprite.rect.width);
+    }
+
+    // Adjust the image's width
+    private void AdjustImageWidth(Sprite sprite, RectTransform transform)
+    {
+        transform.sizeDelta = new Vector2 ((reference_height*sprite.rect.width) / sprite.rect.height, reference_height);
+        //new Vector2((reference_width*sprite.rect.width) / sprite.rect.width, reference_height);
     }
 }
